--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -21,9 +21,9 @@
           <span class="point"> · </span>
           <span>{{ site.description }}</span>
           <span class="point"> · </span>
-          <span>&copy; 2014 LippiOuYang</span>
+          <span>&copy; 2015 AresTao</span>
           <span class="point"> · </span>
-          <span>Designed by <a href="https://github.com/LippiOuYang">Lippi</a></span>
+          <span>Designed by <a href="https://github.com/AresTao">AresTao</a></span>
 
       </div>
     </div>
